--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ coverage>=4.1
 Sphinx>=1.4.8
 pytest>=2.9.2
 pytest-runner>=2.11.1
-Click>=6.0
+decorator>=4.3.0
+sh>=1.12.4
 numpy>=1.14.2
 sympy>=1.1.1
