using the lxml parser for bs4

--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ pytest>=2.9.2
 pytest-runner>=2.11.1
 beautifulsoup4>=4.6.3
 decorator>=4.3.0
-sh>=1.12.4
+lxml>=4.2.5
 numpy>=1.14.2
+sh>=1.12.4
 sympy>=1.1.1
