--- a/tox.ini
+++ b/tox.ini
@@ -10,7 +10,7 @@ commands=flake8 practical
 setenv =
     PYTHONPATH = {toxinidir}
 deps =
-    -r{toxinidir}/requirements_dev.txt
+    -r{toxinidir}/requirements.txt
 commands =
     python setup.py test
 
